# NAM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: nam_data.csv
demo/: climate_projections.ipynb  data_cleanup.ipynb  demo.ipynb  demo_nr.ipynb  excel_replication.ipynb  excel_replication_new_api.ipynb  hydroapi_test.ipynb  optimization.ipynb  test.py  test_new.py
report/: data_cleaning.ipynb  descriptive_statistics.ipynb  descriptive_statistics_future.ipynb  future_discharge.ipynb  hydro_model_calibration.ipynb
src/: nam.py  parameters.py
src/data/: __init__.py
src/data/processed/: annual_statistics.csv  monthly_statistics.csv  timeseries_corrected.csv
src/data/raw/: ET_year_month.xlsx  PTQ_year_month.xlsx  Reference_PQ_year_month.xlsx
src/hydro_model_interface/: __init__.py  parameters.py
src/hydrosystem/discharge/nam/: __init__.py  math.py  observation.py  parameters.py  step.py
src/hydrosystem/double_mass_analysis/: __init__.py
src/hydrosystem/evt_analysis/: __init__.py
src/hydrosystem/t_test/: __init__.py
src/hydrosystem/trend_analysis/: __init__.py
src/nam/: __init__.py  defaults.py  nam.py  nam_excel.py  nam_plus.py  utils.py
src/nam_classic/: defaults.py  nam_excel.py  nam_excel_hydroapi.py  nam_plus.py  nam_plus_hydro_api.py
src/nested_resevoirs/: nested_resevoirs.py  nested_resevoirs_hydro_api.py  parameters.py  transfer.py
test/: nam_test.py
