[project]
name = "nam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rasmus Munkner", email = "reu@topdanmark.dk" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
nam = "nam:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
data = ["src/nam/data"]
